--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,14 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "@xyflow/react": "^12.8.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "react-flow": "^1.0.3",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.1",
