--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
+    "jwt-decode": "^4.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
