--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,5 +5,7 @@
       "source": "/api/(.*)",
       "destination": "/api"
     }
-  ]
+  ],
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "git": { "deploymentEnabled": false }
 }
