--- a/backend/package.json
+++ b/backend/package.json
@@ -14,17 +14,21 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^24.1.0",
     "@types/pg": "^8.15.5",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "express-session": "^1.18.2",
     "jwt-decode": "^4.0.0",
+    "pg": "^8.16.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
