--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,5 +6,6 @@
       "destination": "/api/index"
     }
   ],
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "git": { "deploymentEnabled": false }
 }
